fixed annotation and openApi documentation
