# app/Http/Controllers/API/Task/TaskController.php
@@ -107,7 +107,7 @@ class TaskController extends Controller
      *     tags={"Tasks"},
      *     security={{"bearerAuth":{}}},
      *     @OA\Parameter(
-     *          name="id",
+     *          name="task",
      *          in="path",
      *          description="ID of the task to retrieve",
      *          required=true,
@@ -137,14 +137,17 @@ class TaskController extends Controller
 
     /**
      * @OA\POST(
-     *     path="/api/tasks",
+     *     path="/api/tasks/store",
      *     summary="Create a new task",
      *     tags={"Tasks"},
      *     security={{"bearerAuth":{}}},
      *     @OA\RequestBody(
      *         description="Create Task Request",
      *         required=true,
-     *         @OA\JsonContent(ref="#/components/schemas/CreateTaskRequest")
+     *         @OA\MediaType(
+     *               mediaType="application/x-www-form-urlencoded",
+     *               @OA\Schema(ref="#/components/schemas/CreateTaskRequest")
+     *          ),
      *     ),
      *     @OA\Response(
      *         response=201,
@@ -178,7 +181,7 @@ class TaskController extends Controller
 
     /**
      * @OA\PUT(
-     *     path="/api/tasks/{task}",
+     *     path="/api/tasks/update/{task}",
      *     summary="Update specified task",
      *     tags={"Tasks"},
      *     security={{"bearerAuth":{}}},
@@ -192,7 +195,10 @@ class TaskController extends Controller
      *     @OA\RequestBody(
      *         description="Update Task Request",
      *         required=true,
-     *         @OA\JsonContent(ref="#/components/schemas/UpdateTaskRequest")
+     *         @OA\MediaType(
+     *              mediaType="application/x-www-form-urlencoded",
+     *              @OA\Schema(ref="#/components/schemas/UpdateTaskRequest")
+     *         ),
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -224,14 +230,24 @@ class TaskController extends Controller
     }
 
     /**
-     * @OA\PATCH(
-     *     path="api/tasks/change-status",
+     * @OA\PUT(
+     *     path="/api/tasks/change-status/{task}",
      *     summary="Change status for specified task",
      *     tags={"Tasks"},
+     *     @OA\Parameter(
+     *          name="task",
+     *          in="path",
+     *          description="ID of the task to update",
+     *          required=true,
+     *          @OA\Schema(type="integer")
+     *      ),
      *     @OA\RequestBody(
      *         description="Change Task Status",
      *         required=true,
-     *         @OA\JsonContent(ref="#/components/schemas/ChangeTaskStatusRequest")
+     *           @OA\MediaType(
+     *                mediaType="application/x-www-form-urlencoded",
+     *                @OA\Schema(ref="#/components/schemas/ChangeTaskStatusRequest")
+     *           ),
      *     ),
      *     @OA\Response(
      *         response=200,
@@ -258,12 +274,12 @@ class TaskController extends Controller
 
     /**
      * @OA\DELETE(
-     *     path="/api/tasks/{id}",
+     *     path="/api/tasks/destroy/{task}",
      *     summary="Delete specified task",
      *     tags={"Tasks"},
      *     security={{"bearerAuth":{}}},
      *     @OA\Parameter(
-     *         name="id",
+     *         name="task",
      *         in="path",
      *         description="ID of the task to delete",
      *         required=true,
@@ -286,33 +302,13 @@ class TaskController extends Controller
      *             )
      *         )
      *     ),
-     *     @OA\Response(
-     *         response=400,
-     *         description="Invalid request",
-     *         @OA\JsonContent(
-     *             @OA\Property(
-     *                 property="message",
-     *                 type="string",
-     *                 description="Error message indicating what went wrong."
-     *             ),
-     *             @OA\Property(
-     *                 property="errors",
-     *                 type="object",
-     *                 description="Validation errors for each field.",
-     *                 @OA\AdditionalProperties(
-     *                     type="array",
-     *                     @OA\Items(type="string")
-     *                 )
-     *             )
-     *         )
-     *     ),
      *     @OA\Response(response=401, description="Unauthorized"),
      *     @OA\Response(response=404, description="Not Found")
      * )
      */
-    public function destroy(Task $task): JsonResponse
+    public function destroy(int $id): JsonResponse
     {
-        $responseDTO = $this->taskService->deleteTask($task);
+        $responseDTO = $this->taskService->deleteTask($id);
 
         return response()->json($responseDTO);
     }
